# LODtool

./: pyproject.toml
lod_tool/: Test2.py  __main__.py  asset_renaming.py  check_lods.py  get_bounding_diameter.py  get_lod_screen_sizes copy.py  get_lod_screen_sizes.py  get_lod_triangles.py  get_lod_uvs.py  get_lod_vertex_density.py  get_mesh_name.py  get_number_materials.py  get_path.py  make_csv.py  remove_lods.py  test.py  vertex_colors.py
tests/: test_lod_tool.py
