[tool.poetry]
name = "lod_tool"
version = "0.1.0"
description = ""
authors = ["anukiancu <anukiancu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
unreal = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
